# reposplat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/reposplat/: __init__.py  core.py  main.py  models.py
test/: test_core.py
